# shellymon

./: .env.example  AUTHORS  Cargo.toml  Justfile  README.md  compose.yml  flake.nix
.github/workflows/: ci.yml
local/: shellymon.yml
local/mosquitto/: mosquitto.conf  password.txt
shelly-rpc/: Cargo.toml
shelly-rpc/src/: components.rs  lib.rs  notification.rs
src/: config.rs  lib.rs  main.rs  telemetry.rs
src/receiver/: error.rs  mod.rs  mqtt.rs
