[package]
name = "shellymon"
version = "0.1.0"
edition = "2021"
authors = ["Matteo Joliveau <matteo@matteojoliveau.com>"]

[workspace]
members = ["shelly-rpc"]

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.0.24", features = ["derive", "env", "wrap_help", "cargo"] }
dotenv = "0.15.0"
config = "0.13.2"
secstr = { version = "0.5.1", features = ["serde"] }
futures = "0.3.25"
paho-mqtt = "0.11.1"
async-channel = "1.7.1"
shelly_rpc = { path = "./shelly-rpc"}